crates/burn-cube/tests/error/array_variable.rs
use burn_cube::prelude::*;

#[cube]
fn range(x: UInt, y: UInt) {
    let _array = [x, y];
}

fn main() {}
