crates/burn-cube/tests/error/array_variable.stderr
error: Only arrays of literals are supported
 --> tests/error/array_variable.rs:5:18
  |
5 |     let _array = [x, y];
  |                  ^^^^^^
